# bolt

./: .SRCINFO  .gitignore  BOLT_NEEDED_GHOSTSNAP_INT.md  BOLT_ROADMAP.md  Boltfile.toml  CHANGELOG.md  Cargo.toml  DEPEND.md  DRIFT_PROJECT_START.md  DRIFT_STATUS_REVIEW.md  ECOSYSTEM_ARCHITECTURE.md  GAMING.md  GHOSTFORGE.md  GPU_SUPPORT.md  INTEGRATION.md  PKGBUILD  POSITIONING.md  PRIORITY_GP.md  README.md  README_UPDATED.md  TODO.md  build-packages.sh  build.zig  build.zig.zon  install.sh  libtest_nova_api.rlib  package.json  surge-deploy.js
.bolt/cas/objects/or/: ithm = .sha256, .value = { 170, 7, 174, 19, 117, 207, 44, 167, 160, 56, 103, 24, 46, 105, 172, 151, 133, 175, 219, 153, 77, 20, 74, 233, 204, 178, 189, 193, 202, 15, 196, 50 } }  ithm = .sha256, .value = { 209, 74, 124, 187, 164, 19, 145, 38, 49, 208, 16, 217, 4, 74, 135, 152, 160, 252, 208, 237, 199, 97, 44, 52, 80, 2, 17, 25, 132, 239, 161, 73 } }  ithm = .sha256, .value = { 251, 176, 121, 45, 115, 180, 40, 61, 146, 237, 28, 105, 5, 59, 65, 227, 162, 93, 35, 2, 173, 132, 185, 237, 241, 228, 217, 12, 118, 51, 254, 191 } }
.github/workflows/: ci.yml  nightly.yml
benches/: quic_benchmarks.rs
debian/: bolt.postinst  bolt.postrm  bolt.prerm  bolt.service  bolt.sysusers  bolt.tmpfiles  bolt.toml  changelog  control  copyright  rules
docs/: CLI.md  COMMANDS.md  MESHVPN_GUIDE.md  NETWORKING_GUIDE.md  NVBIND.md  SNAPSHOTS.md
examples/: Boltfile-with-snapshots.toml  README.md  ai_gpu_integration_test.rs  api_usage.rs  gaming-wayland-kde.bolt.toml  ghostforge_integration.rs  gpu_test.rs  nova_integration.rs  ollama-cpu.bolt.toml  ollama-gpu.bolt.toml  ollama_ai_profile.toml  quic-networking-test.rs  steam_gaming_profile.toml  wayland_kde_gpu_test.rs
src/: bolt_dns.zig  capsule.zig  cluster.zig  content_store.zig  error.rs  lib.rs  main.rs  main.zig  migration.zig  network.zig  nova_api.rs  nova_bridge.rs  oci.zig  quic_fabric.zig  reproducible_builds.zig  resource_quotas.zig  root.zig  surge.zig  types.rs
src/ai/: llm.rs  mod.rs  ollama.rs
src/builds/: mod.rs
src/capsules/: mod.rs  snapshots.rs  templates.rs  vm.rs
src/cli/: compat.rs  mod.rs
src/compat/: compose.rs  docker.rs  mod.rs  podman.rs
src/config/: mod.rs
src/dev_workflows/: ai_assistant.rs  auto_deployment.rs  dependency_cache.rs  hot_reload.rs  mod.rs
src/docker_compat/: api_server.rs  compose.rs  migration.rs  mod.rs
src/gaming/: advanced_optimizations.rs  audio.rs  display_tech.rs  frame_pacing.rs  mod.rs  realtime.rs  rtx_features.rs  steam_integration.rs
src/gaming/wayland/: compositor.rs  display.rs  gpu_integration.rs  input.rs  kde_optimizations.rs  mod.rs  output.rs  protocols.rs
src/monitoring/: health.rs  mod.rs  prometheus.rs  tracing_setup.rs
src/network/: mod.rs
src/network/quic/: discovery.rs  mod.rs
src/networking/: advanced_networking.rs  bridge.rs  ebpf.rs  ebpf_real.rs  firewall_advanced.rs  mod.rs  quic.rs  quic_proxy.rs  quic_real.rs
src/optimizations/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  storage.rs
src/orchestration/: load_balancing.rs  mod.rs
src/plugins/: loader.rs  mod.rs  registry.rs  traits.rs
src/profiles/: community.rs  mod.rs  repository.rs  validation.rs
src/registry/: client.rs  drift_integration.rs  mod.rs  types.rs
src/runtime/: environment.rs  input.rs  mod.rs  nvbind.rs
src/runtime/gpu/: amd.rs  mod.rs  nvbind.rs  nvidia.rs  velocity.rs
src/runtime/oci/: cdi.rs  container.rs  executor.rs  mod.rs  namespace.rs
src/runtime/storage/: ghostbay.rs  mod.rs  oci_client.rs  overlay.rs  registry.rs  s3.rs
src/snapshots/: btrfs.rs  mod.rs
src/surge/: mod.rs  status_api.rs
src/volume/: mod.rs
tests/: PRODUCTION_VERIFICATION.md  basic_tests.rs  capsule_tests.rs  comprehensive_api_test.rs  runtime_tests.rs  surge_tests.rs
