[package]
name = "bolt"
version = "0.1.0"
edition = "2024"
description = "Next-generation container runtime for Linux gaming and development"
license = "MIT"
authors = ["ghostkellz"]
repository = "https://github.com/ghostkellz/bolt"

[[bin]]
name = "bolt"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === PHASE 1: OCI RUNTIME & CONTAINERS ===
# OCI runtime components
oci-spec = "0.6"
# Container runtime components
# libcontainer = "0.3"  # Not available, use alternatives
# oci-distribution = "0.10"  # Not available, implement custom
# docker-api = "0.14"  # Not available, use reqwest
# Filesystem and storage
tempfile = "3.8"

# === PHASE 2: BOLT CAPSULES (VM-LIKE) ===
# Virtualization components (commented out for now)
# kvm-ioctls = "0.16"  # For VM capabilities
# vm-memory = "0.14"   # Memory management
# Memory management
memmap2 = "0.9"
# Process isolation
# caps = "0.5"  # Linux capabilities
# Security profiles
# libseccomp = "0.3"  # Seccomp filtering

# === PHASE 3: QUIC NETWORKING ===
# QUIC implementation
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
# DNS and service discovery
# trust-dns-client = "0.23"  # Use hickory-dns instead
# trust-dns-server = "0.23"   # Use hickory-dns instead
# hickory-dns = "0.24"  # Has dependency issues
# Networking utilities
socket2 = { version = "0.5", features = ["all"] }
# netlink-packet-core = "0.7"     # Linux-specific
# netlink-packet-route = "0.17"   # Linux-specific

# === PHASE 4: REPRODUCIBLE BUILDS ===
# Content addressing
sha2 = "0.10"
blake3 = "1.5"
# Compression
zstd = "0.13"
tar = "0.4"
flate2 = "1.0"
# Build isolation
# sandbox = "0.2"  # May not be available

# === GAMING INFRASTRUCTURE ===
# GPU management
# nvml-wrapper = "0.9"  # NVIDIA-specific, optional
# Wayland support
wayland-client = "0.31"
smithay-client-toolkit = "0.18"
# Audio systems
# pipewire = "0.8"  # Linux-specific audio
# pulse = "2.5"     # PulseAudio bindings

# === SYSTEM INTERFACES ===
# Low-level system calls
nix = { version = "0.27", features = ["process", "mount", "sched", "user", "net", "signal", "fs"] }
# Cgroups management
# cgroups-rs = "0.3"  # Linux-specific
# Namespace management
# unshare = "0.7"     # Linux-specific
# Filesystem operations
walkdir = "2.4"
# Process management
# procfs = "0.16"  # Linux-specific

# === UTILITIES ===
# Serialization
bincode = "1.3"
# UUID generation
uuid = { version = "1.8", features = ["v4"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Async utilities
futures = "0.3"
# HTTP client for registries
reqwest = { version = "0.11", features = ["json", "stream"] }
# JSON handling
serde_json = "1.0"
# Regular expressions
regex = "1.10"
# TLS certificate generation
rcgen = "0.12"
# Random number generation
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
