[package]
name = "bolt"
version = "0.1.0"
edition = "2024"
description = "Next-generation Rust container runtime with gaming optimizations, GPU passthrough, and QUIC networking"
license = "MIT"
authors = ["ghostkellz <ghostkellz@proton.me>"]
repository = "https://github.com/CK-Technology/bolt"
homepage = "https://github.com/CK-Technology/bolt"
documentation = "https://github.com/CK-Technology/bolt#api"
readme = "README.md"
keywords = ["containers", "gaming", "gpu", "quic", "orchestration"]
categories = ["virtualization", "game-development", "network-programming"]
rust-version = "1.85"

[lib]
name = "bolt"
path = "src/lib.rs"

[[bin]]
name = "bolt"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === PHASE 1: OCI RUNTIME & CONTAINERS ===
# OCI runtime components
oci-spec = { version = "0.6", optional = true }
# Container runtime components
# libcontainer = "0.3"  # Not available, use alternatives
# oci-distribution = "0.10"  # Not available, implement custom
# docker-api = "0.14"  # Not available, use reqwest
# Filesystem and storage
tempfile = "3.8"

# === PHASE 2: BOLT CAPSULES (VM-LIKE) ===
# Virtualization components (commented out for now)
# kvm-ioctls = "0.16"  # For VM capabilities
# vm-memory = "0.14"   # Memory management
# Memory management
memmap2 = "0.9"
# Process isolation
# caps = "0.5"  # Linux capabilities
# Security profiles
# libseccomp = "0.3"  # Seccomp filtering

# === PHASE 3: QUIC NETWORKING ===
# QUIC implementation
quinn = { version = "0.10", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
# DNS and service discovery
# trust-dns-client = "0.23"  # Use hickory-dns instead
# trust-dns-server = "0.23"   # Use hickory-dns instead
# hickory-dns = "0.24"  # Has dependency issues
# Networking utilities
socket2 = { version = "0.5", features = ["all"] }
# netlink-packet-core = "0.7"     # Linux-specific
# netlink-packet-route = "0.17"   # Linux-specific

# === PHASE 4: REPRODUCIBLE BUILDS ===
# Content addressing
sha2 = "0.10"
blake3 = "1.5"
# Compression
zstd = "0.13"
tar = "0.4"
flate2 = "1.0"
# Build isolation
# sandbox = "0.2"  # May not be available

# === GAMING INFRASTRUCTURE ===
# GPU management
# nvml-wrapper = "0.9"  # NVIDIA-specific, optional
# Wayland support
wayland-client = { version = "0.31", optional = true }
smithay-client-toolkit = { version = "0.18", optional = true }
# Audio systems
# pipewire = "0.8"  # Linux-specific audio
# pulse = "2.5"     # PulseAudio bindings

# === SYSTEM INTERFACES ===
# Low-level system calls
nix = { version = "0.27", features = ["process", "mount", "sched", "user", "net", "signal", "fs"], optional = true }
# Cgroups management
# cgroups-rs = "0.3"  # Linux-specific
# Namespace management
# unshare = "0.7"     # Linux-specific
# Filesystem operations
walkdir = "2.4"
# Process management
# procfs = "0.16"  # Linux-specific

# === UTILITIES ===
# Serialization
bincode = "1.3"
# UUID generation
uuid = { version = "1.8", features = ["v4"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Async utilities
futures = "0.3"
futures-util = "0.3"
# HTTP client for registries
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
# JSON handling
serde_json = "1.0"
# Regular expressions
regex = "1.10"
# TLS certificate generation
rcgen = "0.12"
# Random number generation
rand = "0.8"
# Directory utilities
dirs = "5.0"
# AWS SDK for S3 storage
aws-config = "1.1"
aws-sdk-s3 = "1.14"
aws-smithy-types = "1.1"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
test-case = "3.1"
pretty_assertions = "1.4"
mockall = "0.12"
bytes = "1.5"
serde_yaml = "0.9"
num_cpus = "1.16"

[[bench]]
name = "quic_benchmarks"
harness = false
required-features = ["quic-networking"]

[features]
default = ["gaming", "quic-networking", "oci-runtime"]

# Core features
gaming = ["wayland-client", "smithay-client-toolkit"]
quic-networking = ["quinn", "rustls"]
oci-runtime = ["oci-spec", "nix"]

# Optional GPU support
nvidia-support = []  # Enable with nvidia-ml crate when available
amd-support = []     # Enable with ROCm support

# Development features
examples = []
